--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://34.228.63.18:8081/repository/maven-releases</url>
+	      <url>http://35.175.222.234:8081/repository/maven-releases//url>
 	    </repository>
 	    
 	    <snapshotRepository>
